--- a/test-output/index.html
+++ b/test-output/index.html
@@ -127,21 +127,6 @@
           <div class="suite-Learnings-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">JavaStreamsWithSelenium</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="javaStream">
-                  </a> <!-- javaStream -->
-                  <span class="method-name">javaStream</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Learnings-class-passed -->
-          <div class="suite-Learnings-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">JavaStreamsPractise</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -150,6 +135,21 @@
                   <a name="JavaStreamPractice">
                   </a> <!-- JavaStreamPractice -->
                   <span class="method-name">JavaStreamPractice</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Learnings-class-passed -->
+          <div class="suite-Learnings-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">JavaStreamsWithSelenium</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="javaStream">
+                  </a> <!-- javaStream -->
+                  <span class="method-name">javaStream</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -164,6 +164,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;2&quot; guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Learnings&quot; parallel=&quot;methods&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;Listeners&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;2&quot; name=&quot;MyTest&quot; parallel=&quot;methods&quot;&gt;
     &lt;groups&gt;
       &lt;run&gt;
@@ -231,16 +234,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'javaStream')
 data.setCell(0, 2, 'JavaStreamsWithSelenium')
-data.setCell(0, 3, 20673);
+data.setCell(0, 3, 26302);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'JavaStreamPractice')
 data.setCell(1, 2, 'JavaStreamsPractise')
-data.setCell(1, 3, 50);
+data.setCell(1, 3, 110);
 window.suiteTableData['Learnings']= { tableData: data, tableDiv: 'times-div-Learnings'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Learnings">
               </div> <!-- times-div-Learnings -->
             </div> <!-- times-div -->
@@ -259,6 +262,13 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
+              <span class="ignored-class-name">Intro</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">Introduction</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
               <span class="ignored-class-name">CalendarHandling</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">calendar</span>
@@ -269,13 +279,6 @@ return data;
               <span class="ignored-class-name">WindowsHandling</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">windowHandle</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">Intro</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">Introduction</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
